[gd_scene load_steps=38 format=3 uid="uid://d1uxb8p7iv5vm"]

[ext_resource type="Script" uid="uid://v7jho3hsmjon" path="res://Player/player.gd" id="1_k53q1"]
[ext_resource type="Script" uid="uid://up5bvm7rwjr2" path="res://Player/PlayerStateMachine/player_state_machine.gd" id="2_od3ui"]
[ext_resource type="Script" uid="uid://cutyoreonxf25" path="res://Player/PlayerStateMachine/player_idle.gd" id="4_5mn5l"]
[ext_resource type="Script" uid="uid://db01kmh00rqac" path="res://Player/PlayerStateMachine/player_walk.gd" id="5_wwis0"]
[ext_resource type="Script" uid="uid://diiyoglo6l5d1" path="res://Player/PlayerStateMachine/player_jump.gd" id="6_1t7bj"]
[ext_resource type="Script" uid="uid://dplekcbkeejx0" path="res://Player/PlayerStateMachine/player_ledge_grab.gd" id="7_00tjw"]
[ext_resource type="Script" uid="uid://y8bb4k1txhkm" path="res://Player/PlayerStateMachine/player_fall.gd" id="7_6pw7c"]
[ext_resource type="Texture2D" uid="uid://cfyuufdmyof5d" path="res://Player/Dwarf.png" id="7_od3ui"]
[ext_resource type="Script" uid="uid://004s67o4k21g" path="res://Player/PlayerStateMachine/player_place_bomb.gd" id="8_5htga"]
[ext_resource type="Texture2D" uid="uid://nurf06um3rbe" path="res://Sprites/PointLight128x128.tres" id="8_od3ui"]
[ext_resource type="Script" uid="uid://cawcuiwf8vjav" path="res://Player/PlayerStateMachine/player_fly.gd" id="9_p5o4e"]
[ext_resource type="Texture2D" uid="uid://d1xco2pck2gey" path="res://Player/Sprites/Picaxe.png" id="9_x3vf3"]
[ext_resource type="Script" uid="uid://cqr57p4qxaqy4" path="res://Player/Scripts/picaxe.gd" id="10_apopc"]
[ext_resource type="Script" uid="uid://btmuwgxyr3ptq" path="res://Player/PlayerStateMachine/player_stun.gd" id="10_pisgm"]
[ext_resource type="Script" uid="uid://do0q3htxug8ov" path="res://Player/PlayerStateMachine/player_die.gd" id="11_b1ygp"]
[ext_resource type="Script" uid="uid://cntla71dkr2lv" path="res://Player/Scripts/game_camera.gd" id="13_lfmf2"]
[ext_resource type="Texture2D" uid="uid://f8npsbu1nkan" path="res://Sprites/DirectionalGradiant.png" id="14_dkpta"]
[ext_resource type="Script" uid="uid://e06x8ygfbev6" path="res://Player/Scripts/directional_light.gd" id="15_lfmf2"]
[ext_resource type="Texture2D" uid="uid://bk11gdlw8kb0m" path="res://Sprites/Pointer.png" id="19_o28un"]
[ext_resource type="Script" uid="uid://cy5vbga4r2jrf" path="res://Player/Scripts/escape_pod_pointer.gd" id="20_n471f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_buux6"]
size = Vector2(6, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pisgm"]
size = Vector2(5, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apopc"]
size = Vector2(6, 14)

[sub_resource type="Animation" id="Animation_5mn5l"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.70000005, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7, 2]
}

[sub_resource type="Animation" id="Animation_p3d0d"]
resource_name = "JumpLand"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="Animation" id="Animation_cwjem"]
resource_name = "PeakOfJump"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [17, 18, 19]
}

[sub_resource type="Animation" id="Animation_5htga"]
resource_name = "PlaceBomb"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29, 30]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/PlaceBomb")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"placeBomb"
}]
}

[sub_resource type="Animation" id="Animation_wwis0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_6pw7c"]
resource_name = "StartOfJump"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [15, 16]
}

[sub_resource type="Animation" id="Animation_1t7bj"]
resource_name = "Walk"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1t7bj"]
_data = {
&"Idle": SubResource("Animation_5mn5l"),
&"JumpLand": SubResource("Animation_p3d0d"),
&"PeakOfJump": SubResource("Animation_cwjem"),
&"PlaceBomb": SubResource("Animation_5htga"),
&"RESET": SubResource("Animation_wwis0"),
&"StartOfJump": SubResource("Animation_6pw7c"),
&"Walk": SubResource("Animation_1t7bj")
}

[sub_resource type="Gradient" id="Gradient_b1ygp"]
colors = PackedColorArray(0.5254902, 0.5647059, 0.5529412, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_o28un"]
gradient = SubResource("Gradient_b1ygp")

[sub_resource type="Curve" id="Curve_b1ygp"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_o28un"]
curve = SubResource("Curve_b1ygp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n471f"]
particle_flag_disable_z = true
angle_min = 1.0728835e-05
angle_max = 360.00003
spread = 180.0
initial_velocity_max = 300.0
angular_velocity_min = -100.000015
angular_velocity_max = 99.999985
gravity = Vector3(0, 98, 0)
scale_min = 4.0
scale_max = 8.0
scale_curve = SubResource("CurveTexture_o28un")
color = Color(1, 0, 0, 1)
color_initial_ramp = SubResource("GradientTexture1D_o28un")
hue_variation_min = -2.2351742e-08
hue_variation_max = -2.2351742e-08

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_b1ygp"]
light_mode = 1

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
floor_constant_speed = true
floor_max_angle = 1.3089969
floor_snap_length = 4.0
script = ExtResource("1_k53q1")
jumpHeight = 25.0
jumpDistance = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_buux6")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_pisgm")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("inputBufferTimer", "jumpBufferTimer", "coyoteTimer", "ledgeRayCollision", "ledgeRaySpace", "initial_state", "parent")]
script = ExtResource("2_od3ui")
inputBufferTimer = NodePath("../Timers/InputBuffer")
jumpBufferTimer = NodePath("../Timers/JumpBuffer")
coyoteTimer = NodePath("../Timers/CoyoteTimer")
ledgeRayCollision = NodePath("../LedgeRaycasts/LedgeRaycastCollisionCheck")
ledgeRaySpace = NodePath("../LedgeRaycasts/LedgeRaycastSpaceCheck")
initial_state = NodePath("Idle")
parent = NodePath("..")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim")]
script = ExtResource("4_5mn5l")
anim = NodePath("../../AnimationPlayer")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim")]
script = ExtResource("5_wwis0")
anim = NodePath("../../AnimationPlayer")

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim")]
script = ExtResource("6_1t7bj")
anim = NodePath("../../AnimationPlayer")

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim")]
script = ExtResource("7_6pw7c")
anim = NodePath("../../AnimationPlayer")

[node name="LedgeGrab" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim")]
script = ExtResource("7_00tjw")
anim = NodePath("../../AnimationPlayer")

[node name="PlaceBomb" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim")]
script = ExtResource("8_5htga")
anim = NodePath("../../AnimationPlayer")

[node name="Fly" type="Node" parent="StateMachine" node_paths=PackedStringArray("anim")]
script = ExtResource("9_p5o4e")
anim = NodePath("../../AnimationPlayer")
flightPower = 1500.0
maxFlightPower = 100.0

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("10_pisgm")

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("11_b1ygp")

[node name="Timers" type="Node" parent="."]

[node name="InputBuffer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="JumpBuffer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="Picaxe" type="Sprite2D" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("9_x3vf3")
offset = Vector2(-8, -8)
script = ExtResource("10_apopc")
player = NodePath("..")
offsetAngle = 2.09240734641021

[node name="PlayerSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(0, -4)
texture = ExtResource("7_od3ui")
hframes = 31
frame = 2

[node name="LedgeRaycasts" type="Node2D" parent="."]
visible = false

[node name="LedgeRaycastCollisionCheck" type="RayCast2D" parent="LedgeRaycasts"]
unique_name_in_owner = true
position = Vector2(0, -6)
target_position = Vector2(4, 0)
hit_from_inside = true

[node name="LedgeRaycastSpaceCheck" type="RayCast2D" parent="LedgeRaycasts"]
unique_name_in_owner = true
position = Vector2(0, -7)
target_position = Vector2(4, 0)
hit_from_inside = true

[node name="BumpRaycasts" type="Node2D" parent="."]

[node name="BumpRaycast" type="ShapeCast2D" parent="BumpRaycasts"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_apopc")
target_position = Vector2(0.25, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1t7bj")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.02
drag_top_margin = 0.02
drag_right_margin = 0.02
drag_bottom_margin = 0.02
script = ExtResource("13_lfmf2")

[node name="GeneralLight" type="PointLight2D" parent="."]
unique_name_in_owner = true
energy = 0.5
texture = ExtResource("8_od3ui")
texture_scale = 0.5
height = 20.0

[node name="Directional" type="PointLight2D" parent="."]
unique_name_in_owner = true
energy = 2.0
texture = ExtResource("14_dkpta")
height = 20.0
script = ExtResource("15_lfmf2")

[node name="ParticleEffects" type="Node2D" parent="."]

[node name="DeathParticles" type="GPUParticles2D" parent="ParticleEffects"]
emitting = false
amount = 128
one_shot = true
explosiveness = 0.7
trail_lifetime = 0.09999999999999999
process_material = SubResource("ParticleProcessMaterial_n471f")

[node name="EscapePodPointer" type="Sprite2D" parent="." node_paths=PackedStringArray("player")]
z_index = 5
texture_filter = 1
material = SubResource("CanvasItemMaterial_b1ygp")
scale = Vector2(0.5, 0.5)
texture = ExtResource("19_o28un")
script = ExtResource("20_n471f")
player = NodePath("..")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="timeout" from="Timers/InputBuffer" to="StateMachine" method="_on_input_buffer_timeout"]
[connection signal="timeout" from="Timers/JumpBuffer" to="StateMachine" method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="Timers/CoyoteTimer" to="StateMachine" method="_on_coyote_timer_timeout"]
